<resources>
    <string name="app_name">duelQuizz</string>

    <!-- Ecran principal -->
    <string name="main_title_textbox">DuelQuizz</string>
    <string name="main_addplayer_button">Ajouter un nouveau joueur</string>
    <string name="main_player1_textbox">Veuillez saisir le 1er joueur ! </string>
    <string name="main_player2_textbox">Veuillez saisir le 2ème joueur ! </string>
    <string name="main_play_button">Jouer</string>

    <!-- Ecran jeu -->
    <string name="game_menu_button">Menu</string>
    <string name="game_replay_button">Rejouer</string>
    <string name="game_score1_textbox">0</string>
    <string name="game_score2_textbox">0</string>
    <string name="game_player1_textbox">Player 1</string>
    <string name="game_player2_textbox">Player 2</string>
</resources>